feat: include/exclude filters, config reorganization, permission validation, major refactoring - oops, forgot to commit
